tdf#165228 Don't reuse previous path in save dialog

Change-Id: I8abd005eac663a2d7be1952e0e91acd3cc3ae2de
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181547
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit 22c07826d77adf93ada6e17ed6ac531163dd5059)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/181871
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>