sfx2/source/dialog/filedlghelper.cxx
@@ -1476,6 +1476,7 @@ ErrCode FileDialogHelper_Impl::execute( std::vector<OUString>& rpURLList,
     }
 
     rpURLList.clear();
+    maPath.clear(); // tdf#147202 This should not survive between calls to execute
 
     if ( ! mxFileDlg.is() )
         return ERRCODE_ABORT;
